5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1594_1800.log
== TEST (2019-04-04 17:36:03) 
-- CODE:
a=float(input("insira um numero a: "))
b+float(input("insira um numero b: "))
c=float(input("insira um numero c: "))
d=a**2+b**2+c**2
f=a+b+c
print(round ,7)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b+float(input())
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:39:56) 
-- CODE:
a=float(input("insira um numero a: "))
b+float(input("insira um numero b: "))
c=float(input("insira um numero c: "))
d=(a**2+b**2+c**2)
f=(a+b+c)
g=d/e
print(round ,7)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b+float(input())
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:29:14) 
-- CODE:
a=float(input("insira um numero a: "))
b+float(input("insira um numero b: "))
c=float(input("insira um numero c: "))
d=(a**2+b**2+c**2)
e=(a+b+c)
f=d/e
g=print(round ,7)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b+float(input())
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 17:22:54) 
-- CODE:
a=float(input("insira um numero a: "))
b+float(input("insira um numero b: "))
c=float(input("insira um numero c: "))
a!=
b!=
c!=
v=((((a**2) + (b**2) + (c**2)/ (a + b + c))
	 print(round(v,7))

-- EXECUTION TIME:
0.70564
-- ERROR:
  File "/home/codebench/codes/1594/1800/main.py", line 4
    a!=
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:22:58) 
-- CODE:
a=float(input("insira um numero a: "))
b+float(input("insira um numero b: "))
c=float(input("insira um numero c: "))
a!=
b!=
c!=
v=((((a**2) + (b**2) + (c**2)/ (a + b + c))
print(round(v,7))

-- ERROR:
File "XXXX", line 4
    a!=
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 17:23:18) 
-- CODE:
a=float(input("insira um numero a: "))
b+float(input("insira um numero b: "))
c=float(input("insira um numero c: "))
a!=0
b!=0
c!=0
v=((((a**2) + (b**2) + (c**2)/ (a + b + c))
print(round(v,7))

-- EXECUTION TIME:
0.548999
-- ERROR:
  File "/home/codebench/codes/1594/1800/main.py", line 8
    print(round(v,7))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
